# masa

./: .gitignore  MANIFEST.in  README.md  __init__.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
doc/source/: conf.py  developer_guide.rst  index.rst  user_guide.rst
masa/: __init__.py  parse.py  utils.py
masa/data/: readme.md
masa/scripts/: __init__.py  masa_email.py
scripts/: masa_email.py
scripts/data/: masa.tsv
tests/: __init__.py  run_tests.py  test_functional.py  test_masa.py  test_utils.py
tests/data/: masa.tsv
