[metadata]
version = 20220101
name = masa
author = Bertrand Neron
author_email = freeh4cker
description = masa freedivers filtering given level on so on
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = COPYING
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Development Status :: 4 - Beta

[options]
python_requires = >=3.7
install_requires =
    pandas >= 1.03

packages = find:

[options.packages.find]

exclude =
	build
	tests

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    sphinxcontrib-svg2pdfconverter
    coverage
    build


[options.entry_points]
console_scripts =
    masa=masa.scripts.masa_email:main

[sdist]
formats = gztar

[coverage:run]
source = masa
omit =
    tests/*
    setup.py
branch = True

# to exclude some lines and/or functions from coverage, add a comment
# '# pragma: no cover' in the line to exclude from coverage report
# (or first line of a function, loop etc. to exclude all function/loop)

[coverage:html]
directory = coverage_html

# run tests: coverage run tests/run_tests.py
# coverage html